--- a/content/blogs/ISC Alumni.html
+++ b/content/blogs/ISC Alumni.html
@@ -9,27 +9,18 @@ image: pic09.jpg
 keywords: ""
 slug: isc_alumni
 title: ISC Alumni
+#how to change backgroun color??
 ---
 
-<script src="ISC Alumni_files/header-attrs/header-attrs.js"></script>
+<script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
-<div id="r-markdown" class="section level2">
-<h2>R Markdown</h2>
-<p>This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <a href="http://rmarkdown.rstudio.com" class="uri">http://rmarkdown.rstudio.com</a>.</p>
-<p>When you click the <strong>Knit</strong> button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:</p>
-<pre class="r"><code>summary(cars)</code></pre>
-<pre><code>##      speed           dist       
-##  Min.   : 4.0   Min.   :  2.00  
-##  1st Qu.:12.0   1st Qu.: 26.00  
-##  Median :15.0   Median : 36.00  
-##  Mean   :15.4   Mean   : 42.98  
-##  3rd Qu.:19.0   3rd Qu.: 56.00  
-##  Max.   :25.0   Max.   :120.00</code></pre>
-</div>
-<div id="including-plots" class="section level2">
-<h2>Including Plots</h2>
-<p>You can also embed plots, for example:</p>
-<p><img src="/blogs/ISC%20Alumni_files/figure-html/pressure-1.png" width="672" /></p>
-<p>Note that the <code>echo = FALSE</code> parameter was added to the code chunk to prevent printing of the R code that generated the plot.</p>
+<div id="about-isc-alumni" class="section level2">
+<h2>About ISC Alumni</h2>
+<p>As the alumni organization of the International Students’ Committee (ISC), we provide a platform to promote bonding and sharing of experiences among ISC alumni, to foster connections among the different generations of ISC, and to advance the ISC. We organise speaker series, workshops, casual get-togethers and much more.</p>
+<p>The ISC is the yearly changing organising committee of the St. Gallen Symposium, an international two-day conference taking place at the University of St.Gallen (Switzerland) in May. Every year key decision-makers from the fields of economics, politics, science, and society take part in the symposium to meet and exchange with the next generation of leaders. The entire conference is organised by the International Students’ Committee. It’s a Team of 35 students from the University of St.Gallen who pause their studies for 10 months to engage in the realization of an intergenerational dialogue.</p>
+<p>Want to be a part of it? Apply for the 2022 ISC Team here: <a href="https://www.symposium.org/join-isc-team" class="uri">https://www.symposium.org/join-isc-team</a></p>
+<p>SGS website: <a href="https://www.symposium.org/" class="uri">https://www.symposium.org/</a></p>
+<p>linkedIn: <a href="https://www.linkedin.com/groups/2135824/" class="uri">https://www.linkedin.com/groups/2135824/</a>
+website: <a href="https://www.isc-alumni.org" class="uri">https://www.isc-alumni.org</a></p>
 </div>
