--- a/content/blogs/Women for Women.html
+++ b/content/blogs/Women for Women.html
@@ -28,6 +28,9 @@ subtitle: Be part of a 1-to-1 mentoring and an incredibly strong female communit
 <p>I am Head of Community, responsible to connect the mentees and mentors with each other, building long-term and sustainable connections.</p>
 <p>LinkedIN: <a href="https://www.linkedin.com/company/women-for-women-inc/" class="uri">https://www.linkedin.com/company/women-for-women-inc/</a></p>
 <p>Website/Sign up today: <a href="https://www.womenforwomen.ch/the-initiative" class="uri">https://www.womenforwomen.ch/the-initiative</a></p>
+<p><i class="fab fa-youtube"></i> Hans Rosling, <a href="https://www.youtube.com/watch?v=jbkSRLYSojo" target="_blank">“200 Countries, 200 Years, 4 Minutes”</a>
+<i class="fab fa-youtube"></i></p>
+<p><i class="fab fa-linkedin-in"></i></p>
 <p>#button1: HOW TO ADD BUTTTON</p>
 <p>#HOW to change icons to W4W not Xenia????</p>
 </div>
