--- a/content/blogs/Women for Women.html
+++ b/content/blogs/Women for Women.html
@@ -17,6 +17,33 @@ subtitle: Be part of a 1-to-1 mentoring and an incredibly strong female communit
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
+<style>
+.parallax { 
+    /* The image used */
+    background-image: url("https://github.com/holtzy/R-Markdown-Parallax/raw/master/overview_RGG_faded.png");
+
+    /* Set a specific height */
+    height: 400px; 
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.myimg{
+    width: 10%;
+    color: red;
+    position: absolute;
+    top: 150px;
+    left: 45%;
+}
+</style>
+<!-- Container element -->
+<div class="parallax">
+<pre><code>&lt;a href=&quot;https://github.com/holtzy/R-Markdown-Parallax&quot;&gt; &lt;img class=&quot;myimg&quot; src=&quot;https://github.com/holtzy/R-Markdown-Parallax/raw/master/Rlogo.png&quot;&gt; &lt;/a&gt;</code></pre>
+</div>
 <div id="our-story" class="section level2">
 <h2>Our Story</h2>
 <p>Women for Women is a network connecting and supporting (future) female leaders. We are driven by the belief that women grow by empowering each other.</p>
