--- a/content/blogs/Women for Women.html
+++ b/content/blogs/Women for Women.html
@@ -20,7 +20,7 @@ subtitle: Be part of a 1-to-1 mentoring and an incredibly strong female communit
 <style>
 .parallax { 
     /* The image used */
-    background-image: url("https://github.com/holtzy/R-Markdown-Parallax/raw/master/overview_RGG_faded.png");
+    background-image: w4w.jpg;
 
     /* Set a specific height */
     height: 400px; 
