--- a/content/blogs/Women for Women.html
+++ b/content/blogs/Women for Women.html
@@ -20,7 +20,7 @@ subtitle: Be part of a 1-to-1 mentoring and an incredibly strong female communit
 <style>
 .parallax { 
     /* The image used */
-    background-image: w4w.jpg;
+    background-image: url("https://static.wixstatic.com/media/ba488d_c909402af8014185ad84a52727926e33~mv2.png/v1/fill/w_152,h_68,al_c,q_85,usm_0.66_1.00_0.01/w4w.webp");
 
     /* Set a specific height */
     height: 400px; 
