--- a/content/blogs/Women for Women.html
+++ b/content/blogs/Women for Women.html
@@ -51,23 +51,9 @@ subtitle: Be part of a 1-to-1 mentoring and an incredibly strong female communit
 <h2>My Role</h2>
 <hr />
 <p>I am Head of Community, responsible for our community. Our goal is to nurture our growing community by building long-term and sustainable connections among mentees and mentors through workshops, speeches, casual get-togethers and other events.</p>
-</div>
-<div id="use-buttons-or-tabs-for-sub-chapters" class="section level1 tabset tabset-fade tabset-pills">
-<h1>Use buttons or tabs for sub-chapters</h1>
-<hr />
-<p>Save space in your document using buttons or tabs for sub chapters. Add this code at the end of your title:</p>
-<div id="first" class="section level2">
-<h2>First</h2>
-<p>A first section</p>
-</div>
-<div id="second" class="section level2">
-<h2>Second</h2>
-<p>content of sub-chapter #2</p>
-</div>
-<div id="third" class="section level2">
-<h2>Third</h2>
-<p>content of sub-chapter #3</p>
-<p>.btn {
+<p>{.tabset}
+{.button}
+.btn {
 border-width: 0 0px 0px 0px;
 font-weight: normal;
 text-transform: ;
@@ -84,5 +70,4 @@ border-color: #ffffff;
 <p><i class="fab fa-linkedin-in"></i></p>
 <p>#button1: HOW TO ADD BUTTTON</p>
 <p>#HOW to change icons to W4W not Xenia????</p>
-</div>
 </div>
