--- a/content/blogs/Women for Women.html
+++ b/content/blogs/Women for Women.html
@@ -45,14 +45,12 @@ subtitle: Be part of a 1-to-1 mentoring and an incredibly strong female communit
 <div id="our-story" class="section level2">
 <h2>Our Story</h2>
 <hr />
-<p>Women for Women is a female network connecting and supporting (future) female leaders. We are driven by the belief that women grow by empowering each other. We offer women a network that supports them planning their long-term goals, achieving their ambitions, finding great opportunities and backs them when they arise.</p>
 </div>
 <div id="my-role" class="section level2">
 <h2>My Role</h2>
 <hr />
 <p>I am Head of Community, responsible for our community. Our goal is to nurture our growing community by building long-term and sustainable connections among mentees and mentors through workshops, speeches, casual get-togethers and other events.</p>
-<p>{.tabset}
-{.button}
+<p>{.tabset .tabset-fade .tabset-pills}
 .btn {
 border-width: 0 0px 0px 0px;
 font-weight: normal;
@@ -68,6 +66,4 @@ border-color: #ffffff;
 <p><i class="fab fa-youtube"></i> Hans Rosling, <a href="https://www.youtube.com/watch?v=jbkSRLYSojo" target="_blank">“200 Countries, 200 Years, 4 Minutes”</a>
 <i class="fab fa-youtube"></i></p>
 <p><i class="fab fa-linkedin-in"></i></p>
-<p>#button1: HOW TO ADD BUTTTON</p>
-<p>#HOW to change icons to W4W not Xenia????</p>
 </div>
