--- a/content/blogs/Women for Women.html
+++ b/content/blogs/Women for Women.html
@@ -45,25 +45,24 @@ subtitle: Be part of a 1-to-1 mentoring and an incredibly strong female communit
 <div id="our-story" class="section level2">
 <h2>Our Story</h2>
 <hr />
+<p>Women for Women is a female network connecting and supporting (future) female leaders. We are driven by the belief that women grow by empowering each other. We offer women a network that supports them planning their long-term goals, achieving their ambitions, finding great opportunities and backs them when they arise.</p>
 </div>
 <div id="my-role" class="section level2">
 <h2>My Role</h2>
 <hr />
-<p>I am Head of Community, responsible for our community. Our goal is to nurture our growing community by building long-term and sustainable connections among mentees and mentors through workshops, speeches, casual get-togethers and other events.</p>
-<p>{.tabset .tabset-fade .tabset-pills}
-.btn {
-border-width: 0 0px 0px 0px;
-font-weight: normal;
-text-transform: ;
-}
-.btn-default {
-color: #2ecc71;
-background-color: #ffffff;
-border-color: #ffffff;
-}</p>
+<p>I am Head of Community, responsible for our community. Our goal is to nurture our growing community by building long-term and sustainable connections among mentees and mentors through workshops, speeches, casual get-together and other events.</p>
+</div>
+<div id="caught-your-interest-sign-up-today" class="section level2">
+<h2>Caught Your Interest? Sign up today!</h2>
+<hr />
+<div class="figure">
+<img src="C:/Users/xenia/OneDrive/Desktop/my_beautiful_webiste/static/img/blogs/w4w2.jpg" alt="" />
+<p class="caption">We are stronger</p>
+</div>
+<p><i class="fab fa-linkedin"></i></p>
 <p>LinkedIN: <a href="https://www.linkedin.com/company/women-for-women-inc/" class="uri">https://www.linkedin.com/company/women-for-women-inc/</a></p>
-<p>Website/Sign up today: <a href="https://www.womenforwomen.ch/the-initiative" class="uri">https://www.womenforwomen.ch/the-initiative</a></p>
-<p><i class="fab fa-youtube"></i> Hans Rosling, <a href="https://www.youtube.com/watch?v=jbkSRLYSojo" target="_blank">“200 Countries, 200 Years, 4 Minutes”</a>
-<i class="fab fa-youtube"></i></p>
+<p>Website/Sign up today: <a href="https://www.womenforwomen.ch/the-initiative" class="uri">https://www.womenforwomen.ch/the-initiative</a>
+url:<a href="https://www.linkedin.com/company/women-for-women-inc/" class="uri">https://www.linkedin.com/company/women-for-women-inc/</a></p>
+<p>Button {.tabset .tabset-fade .tabset-pills}</p>
 <p><i class="fab fa-linkedin-in"></i></p>
 </div>
