--- a/content/blogs/My Story.html
+++ b/content/blogs/My Story.html
@@ -11,36 +11,26 @@ draft: false
 image: pic08.jpg
 keywords: ""
 slug: my_story
-title: My Story
+title: My Life in a Nutshell
 ---
 
 <script src="My Story_files/header-attrs/header-attrs.js"></script>
 
 
-<div id="r-markdown" class="section level1">
-<h1>R Markdown</h1>
-<p>This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <a href="http://rmarkdown.rstudio.com" class="uri">http://rmarkdown.rstudio.com</a>.</p>
-<p>You can embed an R code chunk like this:</p>
-<pre class="r"><code>summary(cars)
-##      speed           dist       
-##  Min.   : 4.0   Min.   :  2.00  
-##  1st Qu.:12.0   1st Qu.: 26.00  
-##  Median :15.0   Median : 36.00  
-##  Mean   :15.4   Mean   : 42.98  
-##  3rd Qu.:19.0   3rd Qu.: 56.00  
-##  Max.   :25.0   Max.   :120.00
-fit &lt;- lm(dist ~ speed, data = cars)
-fit
-## 
-## Call:
-## lm(formula = dist ~ speed, data = cars)
-## 
-## Coefficients:
-## (Intercept)        speed  
-##     -17.579        3.932</code></pre>
+<div class="row">
+<div class="col-md-4">
+<p><br><br>Since R Markdown use the <a href="https://getbootstrap.com/docs/4.0/layout/grid/">bootstrap framework</a> under the hood. It is possible to benefit its powerful grid system. Basically, you can consider that your row is divided in 12 subunits of same width. You can then choose to use only a few of this subunits.</p>
 </div>
-<div id="including-plots" class="section level1">
-<h1>Including Plots</h1>
+<div class="col-md-4">
+<p><br><br>Here, I use 3 subunits of size 4 (4x3=12). The last column is used for a plot. You can read more about the grid system <a href="bootstrap%20grid%20system">here</a>. I got this result showing the following code in my R Markdown document.</p>
+</div>
+<div class="col-md-4">
+<p><code>{r, message=FALSE, echo=FALSE} ggplot( mtcars, aes(x=mpg)) + geom_histogram(fill="skyblue", alpha=0.5) + theme_minimal()</code></p>
+</div>
+</div>
+<div id="swiss" class="section level1">
+<h1>Swiss</h1>
+<p>Born and raised in Zurich, Switzerland, I comply with the stereotype of loving cheese, skiing, the mountains and generally the outdoors. See a few impressions of my life below</p>
 <p>You can also embed plots. See Figure <a href="#fig:pie">1</a> for example:</p>
 <pre class="r"><code>par(mar = c(0, 1, 0, 1))
 pie(
