--- a/content/blogs/My Story.html
+++ b/content/blogs/My Story.html
@@ -11,7 +11,7 @@ draft: false
 image: pic08.jpg
 keywords: ""
 slug: my_story
-title: My Life in a Nutshell
+title: A Few Impressions of the Life of a Swiss
 ---
 
 <script src="My Story_files/header-attrs/header-attrs.js"></script>
@@ -28,8 +28,6 @@ title: My Life in a Nutshell
 <p><code>{r, message=FALSE, echo=FALSE} ggplot( mtcars, aes(x=mpg)) + geom_histogram(fill="skyblue", alpha=0.5) + theme_minimal()</code></p>
 </div>
 </div>
-<div id="swiss" class="section level1">
-<h1>Swiss</h1>
 <p>Born and raised in Zurich, Switzerland, I comply with the stereotype of loving cheese, skiing, the mountains and generally the outdoors. See a few impressions of my life below</p>
 <p>You can also embed plots. See Figure <a href="#fig:pie">1</a> for example:</p>
 <pre class="r"><code>par(mar = c(0, 1, 0, 1))
@@ -44,5 +42,4 @@ pie(
 <p class="caption">
 Figure 1: A fancy pie chart.
 </p>
-</div>
 </div>
