--- a/content/blogs/Women for Women.html
+++ b/content/blogs/Women for Women.html
@@ -63,7 +63,10 @@ subtitle: Be part of a 1-to-1 mentoring and an incredibly strong female communit
 <li>Access to women from all over Europe with diverse backgrounds, roles and interests</li>
 <li>Through our mentoring program you will be able to form meaningful, long-lasting relationships with other women</li>
 </ul>
-<p><img src="C:/Users/xenia/OneDrive/Desktop/my_beautiful_webiste/static/img/blogs/w4w2.jpg" /></p>
+<div class="figure">
+<img src="C:/Users/xenia/OneDrive/Desktop/my_beautiful_webiste/static/img/blogs/w4w2.jpg" alt="" />
+<p class="caption">caption</p>
+</div>
 <p><i class="fab fa-linkedin"></i></p>
 <p>LinkedIN: <a href="https://www.linkedin.com/company/women-for-women-inc/" class="uri">https://www.linkedin.com/company/women-for-women-inc/</a></p>
 <p>Website/Sign up today: <a href="https://www.womenforwomen.ch/the-initiative" class="uri">https://www.womenforwomen.ch/the-initiative</a>
