--- a/content/blogs/Women for Women.html
+++ b/content/blogs/Women for Women.html
@@ -42,6 +42,7 @@ subtitle: Be part of a 1-to-1 mentoring and an incredibly strong female communit
 <img src="C:/Users/xenia/OneDrive/Desktop/my_beautiful_webiste/static/img/blogs/w4wevent.jpg" alt="" />
 <p class="caption">Our next Event</p>
 </div>
+<p><img src="/img/blogs/w4w2.jpg" width="70%" /></p>
 <div class="figure">
 <img src="C:/Users/xenia/OneDrive/Desktop/my_beautiful_webiste/static/img/blogs/w4w2.jpg" alt="" />
 <p class="caption">caption</p>
