--- a/content/projects/Women-for-Women.html
+++ b/content/projects/Women-for-Women.html
@@ -13,10 +13,11 @@ categories:
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
-<p><img src="/img/projects/w4wlogo.jpg" width="90%" />
-## Our Story
-***
-Women for Women (W4W) is a female network connecting (future) female leaders. We are driven by the belief that women grow by empowering each other. W4W offers women a network that supports them planning their long-term goals, achieving their ambitions, finding great opportunities and backs them when they arise.</p>
+<div id="our-story" class="section level2">
+<h2>Our Story</h2>
+<hr />
+<p>Women for Women (W4W) is a female network connecting (future) female leaders. We are driven by the belief that women grow by empowering each other. W4W offers women a network that supports them planning their long-term goals, achieving their ambitions, finding great opportunities and backs them when they arise.</p>
+</div>
 <div id="my-role" class="section level2">
 <h2>My Role</h2>
 <hr />
