--- a/content/projects/ISC Alumni.html
+++ b/content/projects/ISC Alumni.html
@@ -24,7 +24,7 @@ categories:
 <h2>Want to be a part of it?</h2>
 <hr />
 <p><img src="/img/projects/iscalumnip.jpg" width="80%" /></p>
-<p><a href="https://www.symposium.org/join-isc-team">Apply for the 2022 ISC Team here</a></p>
+<p><a href="https://www.symposium.org/join-isc-team">Apply for the 2022 ISC Team here!</a></p>
 <p><a href="https://www.isc-alumni.org">Website</a></p>
 <p><a href="https://www.linkedin.com/groups/2135824/">LinkedIn</a></p>
 </div>
